# Advent-of-Code-2025

./: CMakeLists.txt
days/: CMakeLists.txt
days/day1/: main  main.cpp
days/day10/: CMakeLists.txt  main.cpp  main_wrong.cpp  wrong.cpp  wrong2.cpp
days/day11/: CMakeLists.txt  main.cpp
days/day12/: CMakeLists.txt  main.cpp
days/day2/: main  main.cpp
days/day3/: main  main.cpp
days/day4/: main  main.cpp
days/day5/: main  main.cpp
days/day6/: main  main.cpp
days/day7/: main  main.cpp
days/day8/: main  main.cpp
days/day9/: CMakeLists.txt  input_test.txt  main  main.cpp  wrong.cpp  wrong2.cpp
days/template/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/include/utils/: utils.h
